# NNUEEHCS

./: .gitignore  README.md  pyproject.toml
examples/binomial_options/: bo.py  config.yaml
examples/bo_driven/: bo.py  classify_posthoc.py  collate.py  config.yaml  config_kde.yaml  submit_workflow.sh  submit_workflow_kde.sh  workflow_driver.py
examples/metric_evaluation/: evaluate_metrics.py  metric_eval_driver.py
nnueehcs/: checksum_functions.py  classification.py  data_utils.py  evaluation.py  model_builder.py  models.py  training.py  utility.py
tests/: test_classification.py  test_datasets.py  test_evaluation.py  test_model_builder.py  test_results_composite.py  test_training.py
